# imagineKatana

./: CMakeLists.txt  README.md  readme.txt
GenericAssign/: ImagineGlobalSettings.xml  ImagineObjectSettings.xml
Plugins/: ImagineGafferProfile.py
src/imagineRender/: id_state.h  imagine_render.cpp  imagine_render.h  imagine_utils.h  interactive_displays.cpp  katana_helpers.cpp  katana_helpers.h  light_helpers.cpp  light_helpers.h  live_render_helpers.cpp  live_render_helpers.h  live_rendering.cpp  material_helper.cpp  material_helper.h  misc_helpers.h  render_settings.cpp  sg_location_processor.cpp  sg_location_processor.h  utilities.cpp  utilities.h
src/imagineRendererInfo/: imagine_renderer_info.cpp  imagine_renderer_info.h  render_object_info_helper.cpp  render_object_info_helper.h  shader_info_helper.cpp  shader_info_helper.h
src/imagineViewerModifier/: imagine_viewer_modifier.cpp  imagine_viewer_modifier.h
